# eIPC

./: .gitignore  CHANGELOG.md  Makefile  README.md  README_temp.md
.github/workflows/: ci.yml  codeql.yml  eosim-sanity.yml  nightly.yml  qemu-test.yml  release.yml  simulation-test.yml  video-build.yml  weekly.yml
cmd/eipc-cli/: main.go
cmd/eipc-client/: main.go
cmd/eipc-server/: main.go
config/: config.go  config_test.go
core/: benchmark_test.go  endpoint.go  endpoint_test.go  errors.go  events.go  lifecycle.go  message.go  router.go  router_test.go  types.go
docs/: api-reference.md  architecture.md  benchmarks.md  key-management.md  performance.md  security-model.md  use-cases.md
docs/book/: book.md  references.bib
docs/site/: index.html
examples/hello-eipc/: README.md
examples/hello-eipc/client/: main.go
examples/hello-eipc/server/: main.go
promo/: generate_audio.py  promo_scene.py
protocol/: benchmark_test.go  codec.go  frame.go  fuzz_test.go  header.go  protocol_test.go
sdk/c/: CMakeLists.txt
sdk/c/cmake/: eipcConfig.cmake.in
sdk/c/include/: eipc.h  eipc_easy.h  eipc_types.h
sdk/c/src/: eipc_client.c  eipc_easy.c  eipc_frame.c  eipc_hmac.c  eipc_json.c  eipc_server.c  eipc_sha256.c  eipc_sha256.h  eipc_transport.c
sdk/c/tests/: CMakeLists.txt  test_chat_json.c  test_eipc_easy.c  test_frame.c  test_hmac.c  test_transport.c
security/auth/: identity.go  identity_test.go
security/capability/: checker.go  checker_test.go
security/encryption/: aes.go  aes_test.go
security/integrity/: fuzz_test.go  hmac.go  hmac_test.go
security/keyring/: keyring.go  keyring_test.go
security/replay/: tracker.go  tracker_test.go
services/audit/: audit.go  audit_test.go
services/broker/: broker.go  broker_test.go
services/health/: health.go  health_test.go
services/policy/: policy.go  policy_test.go
services/registry/: registry.go  registry_test.go
tests/: integration_test.go  security_test.go  stress_test.go
transport/: transport.go
transport/shm/: shm.go  shm_test.go
transport/tcp/: tcp.go  tcp_test.go  tls_config.go
transport/unix/: unix.go  unix_test.go
transport/windows/: pipe.go
